[gd_scene load_steps=11 format=4 uid="uid://c0twdid1ce4oy"]

[ext_resource type="Texture2D" uid="uid://dbm6cx18ttn0w" path="res://Textures/Tilemaps/DungeonCave/Cave.png" id="1_3ivhg"]
[ext_resource type="Script" uid="uid://4xvye8gqc0db" path="res://Scripts/Room/hallway.gd" id="1_dm8bd"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_tdbc6"]
texture = ExtResource("1_3ivhg")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
0:1/0 = 0
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:1/0 = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
0:2/0 = 0
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8, -8, -8)
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
0:3/0 = 0
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:3/0 = 0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:3/0 = 0
5:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
13:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
12:15/0 = 0
0:16/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
6:16/0 = 0
7:16/0 = 0
8:16/0 = 0
9:16/0 = 0
10:16/0 = 0
11:16/0 = 0
12:16/0 = 0
0:17/0 = 0
1:17/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0
5:17/0 = 0
6:17/0 = 0
7:17/0 = 0
8:17/0 = 0
9:17/0 = 0
10:17/0 = 0
11:17/0 = 0
12:17/0 = 0
0:18/0 = 0
1:18/0 = 0
2:18/0 = 0
3:18/0 = 0
4:18/0 = 0
5:18/0 = 0
6:18/0 = 0
7:18/0 = 0
8:18/0 = 0
9:18/0 = 0
10:18/0 = 0
11:18/0 = 0
12:18/0 = 0
0:19/0 = 0
1:19/0 = 0
2:19/0 = 0
3:19/0 = 0
4:19/0 = 0
5:19/0 = 0
6:19/0 = 0
7:19/0 = 0

[sub_resource type="TileSet" id="TileSet_3bn0o"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_tdbc6")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_fulv6"]
texture = ExtResource("1_3ivhg")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
0:1/0 = 0
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:1/0 = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
0:2/0 = 0
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8, -8, -8)
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
0:3/0 = 0
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:3/0 = 0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:3/0 = 0
5:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
13:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
12:15/0 = 0
0:16/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
6:16/0 = 0
7:16/0 = 0
8:16/0 = 0
9:16/0 = 0
10:16/0 = 0
11:16/0 = 0
12:16/0 = 0
0:17/0 = 0
1:17/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0
5:17/0 = 0
6:17/0 = 0
7:17/0 = 0
8:17/0 = 0
9:17/0 = 0
10:17/0 = 0
11:17/0 = 0
12:17/0 = 0
0:18/0 = 0
1:18/0 = 0
2:18/0 = 0
3:18/0 = 0
4:18/0 = 0
5:18/0 = 0
6:18/0 = 0
7:18/0 = 0
8:18/0 = 0
9:18/0 = 0
10:18/0 = 0
11:18/0 = 0
12:18/0 = 0
0:19/0 = 0
1:19/0 = 0
2:19/0 = 0
3:19/0 = 0
4:19/0 = 0
5:19/0 = 0
6:19/0 = 0
7:19/0 = 0

[sub_resource type="TileSet" id="TileSet_v7qmr"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_fulv6")

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_eoeq3"]
blend_mode = 3

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_uqnu2"]
texture = ExtResource("1_3ivhg")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
13:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
12:15/0 = 0
0:16/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
6:16/0 = 0
7:16/0 = 0
8:16/0 = 0
9:16/0 = 0
10:16/0 = 0
11:16/0 = 0
12:16/0 = 0
0:17/0 = 0
1:17/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0
5:17/0 = 0
6:17/0 = 0
7:17/0 = 0
8:17/0 = 0
9:17/0 = 0
10:17/0 = 0
11:17/0 = 0
12:17/0 = 0
0:18/0 = 0
1:18/0 = 0
2:18/0 = 0
3:18/0 = 0
4:18/0 = 0
5:18/0 = 0
6:18/0 = 0
7:18/0 = 0
8:18/0 = 0
9:18/0 = 0
10:18/0 = 0
11:18/0 = 0
12:18/0 = 0
0:19/0 = 0
1:19/0 = 0
2:19/0 = 0
3:19/0 = 0
4:19/0 = 0
5:19/0 = 0
6:19/0 = 0
7:19/0 = 0
3:13/0 = 0
3:13/0/modulate = Color(0, 0, 0, 1)
3:13/0/material = SubResource("CanvasItemMaterial_eoeq3")

[sub_resource type="TileSet" id="TileSet_k0yfh"]
sources/0 = SubResource("TileSetAtlasSource_uqnu2")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cc630"]
size = Vector2(272, 272)

[node name="LargeHall" type="Node2D"]
script = ExtResource("1_dm8bd")

[node name="WallW" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAFAAUAAAAKAAUAAAAEAAUAAAAFAAIAAAA=")
tile_set = SubResource("TileSet_3bn0o")

[node name="WallN" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAFAAUAAAAKAAUAAAAFAAQAAAAEAAEAAAA=")
tile_set = SubResource("TileSet_3bn0o")

[node name="WallE" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAFAAUAAAAKAAUAAAAGAAUAAAAFAAIAAAA=")
tile_set = SubResource("TileSet_3bn0o")

[node name="WallS" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAFAAUAAAAKAAUAAAAFAAYAAAAEAAMAAAA=")
tile_set = SubResource("TileSet_3bn0o")

[node name="Base" type="TileMapLayer" parent="."]
visible = false
tile_map_data = PackedByteArray("AAABAAUAAAAKAAUAAAAIAAUAAAAJAAUAAAAJAAQAAAAEAAEAAAAIAAYAAAAEAAEAAAAHAAQAAAAEAAEAAAAFAAMAAAAKAAMAAAAGAAIAAAAFAAIAAAAGAAUAAAAJAAUAAAADAAQAAAAEAAEAAAAEAAIAAAAFAAIAAAAEAAUAAAAJAAUAAAABAAQAAAAEAAEAAAACAAUAAAAJAAUAAAACAAYAAAAEAAEAAAAEAAkAAAAFAAIAAAAFAAcAAAAKAAIAAAAFAAgAAAAKAAMAAAAGAAkAAAAFAAIAAAAIAAQAAAAEAAEAAAAHAAYAAAAEAAEAAAAJAAYAAAAEAAEAAAAFAAEAAAAKAAEAAAAFAAUAAAAKAAUAAAADAAUAAAAKAAUAAAADAAYAAAAEAAEAAAAEAAcAAAAFAAIAAAABAAYAAAAEAAEAAAAGAAcAAAAFAAIAAAAJAAUAAAAKAAUAAAAHAAUAAAAKAAUAAAACAAQAAAAEAAEAAAAGAAEAAAAFAAIAAAAGAAMAAAAFAAIAAAAFAAIAAAAKAAIAAAAEAAMAAAAFAAIAAAAGAAgAAAAFAAIAAAAEAAgAAAAFAAIAAAAFAAkAAAAKAAQAAAAEAAEAAAAFAAIAAAAGAAYAAAADAAEAAAAEAAQAAAAFAAMAAAAGAAQAAAADAAIAAAAEAAYAAAAFAAEAAAAFAAYAAAAKAAEAAAAFAAQAAAAKAAQAAAA=")
tile_set = SubResource("TileSet_v7qmr")

[node name="DoorN" type="TileMapLayer" parent="."]
visible = false
tile_map_data = PackedByteArray("AAAFAAMAAAAKAAMAAAAGAAIAAAAFAAIAAAAEAAIAAAAFAAIAAAAFAAEAAAAKAAEAAAAFAAUAAAAKAAUAAAAGAAEAAAAFAAIAAAAGAAMAAAAFAAIAAAAFAAIAAAAKAAIAAAAEAAMAAAAFAAIAAAAEAAEAAAAFAAIAAAAFAAQAAAAKAAQAAAAEAAAAAAAFAAIAAAAGAAAAAAAFAAIAAAAGAP//AAAFAAIAAAAGAP7/AAAFAAIAAAAGAP3/AAAFAAIAAAAEAP3/AAAFAAIAAAAEAP7/AAAFAAIAAAAEAP//AAAFAAIAAAAFAP3/AAAKAAIAAAAFAP7/AAAKAAMAAAAFAP//AAAKAAQAAAAFAAAAAAAKAAUAAAA=")
tile_set = SubResource("TileSet_v7qmr")

[node name="DoorE" type="TileMapLayer" parent="."]
visible = false
tile_map_data = PackedByteArray("AAAIAAUAAAAJAAUAAAAJAAQAAAAEAAEAAAAIAAYAAAAEAAEAAAAHAAQAAAAEAAEAAAAGAAUAAAAJAAUAAAAIAAQAAAAEAAEAAAAHAAYAAAAEAAEAAAAJAAYAAAAEAAEAAAAFAAUAAAAKAAUAAAAJAAUAAAAKAAUAAAAHAAUAAAAKAAUAAAAKAAYAAAAEAAEAAAALAAYAAAAEAAEAAAAMAAYAAAAEAAEAAAANAAYAAAAEAAEAAAANAAQAAAAEAAEAAAALAAQAAAAEAAEAAAAMAAQAAAAEAAEAAAAKAAQAAAAEAAEAAAAKAAUAAAAJAAUAAAALAAUAAAAKAAUAAAAMAAUAAAAJAAUAAAANAAUAAAAKAAUAAAA=")
tile_set = SubResource("TileSet_v7qmr")

[node name="DoorS" type="TileMapLayer" parent="."]
visible = false
tile_map_data = PackedByteArray("AAAEAAkAAAAFAAIAAAAFAAcAAAAKAAIAAAAFAAgAAAAKAAMAAAAGAAkAAAAFAAIAAAAFAAUAAAAKAAUAAAAEAAcAAAAFAAIAAAAGAAcAAAAFAAIAAAAGAAgAAAAFAAIAAAAEAAgAAAAFAAIAAAAFAAkAAAAKAAQAAAAFAAYAAAAKAAEAAAAEAAoAAAAFAAIAAAAEAAsAAAAFAAIAAAAEAAwAAAAFAAIAAAAGAAwAAAAFAAIAAAAGAAsAAAAFAAIAAAAGAAoAAAAFAAIAAAAGAA0AAAAFAAIAAAAEAA0AAAAFAAIAAAAFAAoAAAAKAAUAAAAFAAsAAAAKAAEAAAAFAAwAAAAKAAIAAAAFAA0AAAAKAAMAAAA=")
tile_set = SubResource("TileSet_v7qmr")

[node name="DoorW" type="TileMapLayer" parent="."]
visible = false
tile_map_data = PackedByteArray("AAABAAUAAAAKAAUAAAADAAQAAAAEAAEAAAAEAAUAAAAJAAUAAAABAAQAAAAEAAEAAAACAAUAAAAJAAUAAAACAAYAAAAEAAEAAAAFAAUAAAAKAAUAAAADAAUAAAAKAAUAAAADAAYAAAAEAAEAAAABAAYAAAAEAAEAAAACAAQAAAAEAAEAAAAAAAQAAAAEAAEAAAD//wQAAAAEAAEAAAD+/wQAAAAEAAEAAAD9/wQAAAAEAAEAAAD9/wYAAAAEAAEAAAD+/wYAAAAEAAEAAAD//wYAAAAEAAEAAAAAAAYAAAAEAAEAAAD//wUAAAAJAAUAAAAAAAUAAAAKAAUAAAD9/wUAAAAJAAUAAAD+/wUAAAAKAAUAAAA=")
tile_set = SubResource("TileSet_v7qmr")

[node name="CornerNS" type="TileMapLayer" parent="."]
visible = false
tile_map_data = PackedByteArray("AAAFAAUAAAAKAAUAAAAEAAYAAAAFAAIAAAAEAAQAAAAFAAIAAAAGAAQAAAAFAAIAAAAGAAYAAAAFAAIAAAA=")
tile_set = SubResource("TileSet_3bn0o")

[node name="CornerNE" type="TileMapLayer" parent="."]
visible = false
tile_map_data = PackedByteArray("AAAFAAUAAAAKAAUAAAAGAAYAAAAEAAMAAAAEAAQAAAAFAAIAAAAEAAYAAAADAAIAAAAGAAQAAAADAAIAAAA=")
tile_set = SubResource("TileSet_3bn0o")

[node name="CornerNW" type="TileMapLayer" parent="."]
visible = false
tile_map_data = PackedByteArray("AAAFAAUAAAAKAAUAAAAGAAYAAAAFAAMAAAAEAAQAAAAFAAMAAAAGAAQAAAAFAAIAAAAEAAYAAAAEAAMAAAA=")
tile_set = SubResource("TileSet_3bn0o")

[node name="CornerES" type="TileMapLayer" parent="."]
visible = false
tile_map_data = PackedByteArray("AAAFAAUAAAAKAAUAAAAEAAQAAAADAAEAAAAGAAYAAAADAAEAAAAGAAQAAAAEAAEAAAAEAAYAAAAFAAIAAAA=")
tile_set = SubResource("TileSet_3bn0o")

[node name="CornerEW" type="TileMapLayer" parent="."]
visible = false
tile_map_data = PackedByteArray("AAAFAAUAAAAKAAUAAAAGAAQAAAAEAAEAAAAEAAQAAAAEAAEAAAAEAAYAAAAEAAEAAAAGAAYAAAAEAAEAAAA=")
tile_set = SubResource("TileSet_3bn0o")

[node name="CornerSW" type="TileMapLayer" parent="."]
visible = false
tile_map_data = PackedByteArray("AAAFAAUAAAAKAAUAAAAGAAQAAAAFAAEAAAAEAAYAAAAFAAEAAAAEAAQAAAAEAAEAAAAGAAYAAAAFAAIAAAA=")
tile_set = SubResource("TileSet_3bn0o")

[node name="CornerNES" type="TileMapLayer" parent="."]
visible = false
tile_map_data = PackedByteArray("AAAFAAUAAAAKAAUAAAAEAAQAAAAFAAIAAAAEAAYAAAAFAAIAAAAGAAQAAAADAAIAAAAGAAYAAAADAAEAAAA=")
tile_set = SubResource("TileSet_3bn0o")

[node name="CornerNWS" type="TileMapLayer" parent="."]
visible = false
tile_map_data = PackedByteArray("AAAFAAUAAAAKAAUAAAAEAAYAAAAFAAEAAAAGAAYAAAAFAAIAAAAEAAQAAAAFAAMAAAAGAAQAAAAFAAIAAAA=")
tile_set = SubResource("TileSet_3bn0o")

[node name="CornerESW" type="TileMapLayer" parent="."]
visible = false
tile_map_data = PackedByteArray("AAAFAAUAAAAKAAUAAAAGAAYAAAADAAEAAAAEAAYAAAAFAAEAAAAEAAQAAAAEAAEAAAAGAAQAAAAEAAEAAAA=")
tile_set = SubResource("TileSet_3bn0o")

[node name="CornerNWE" type="TileMapLayer" parent="."]
visible = false
tile_map_data = PackedByteArray("AAAFAAUAAAAKAAUAAAAEAAQAAAAFAAMAAAAEAAYAAAAEAAEAAAAGAAYAAAAEAAEAAAAGAAQAAAADAAIAAAA=")
tile_set = SubResource("TileSet_3bn0o")

[node name="CornerNESW" type="TileMapLayer" parent="."]
visible = false
tile_map_data = PackedByteArray("AAAFAAUAAAAKAAUAAAAEAAYAAAAFAAEAAAAEAAQAAAAFAAMAAAAGAAQAAAADAAIAAAAGAAYAAAADAAEAAAA=")
tile_set = SubResource("TileSet_3bn0o")

[node name="CornerN" type="TileMapLayer" parent="."]
visible = false
tile_map_data = PackedByteArray("AAAFAAUAAAAKAAUAAAAEAAQAAAAFAAIAAAAGAAQAAAAFAAIAAAAGAAYAAAAFAAMAAAAEAAYAAAADAAIAAAA=")
tile_set = SubResource("TileSet_3bn0o")

[node name="CornerE" type="TileMapLayer" parent="."]
visible = false
tile_map_data = PackedByteArray("AAAFAAUAAAAKAAUAAAAEAAYAAAADAAIAAAAEAAQAAAADAAEAAAAGAAYAAAAEAAEAAAAGAAQAAAAEAAEAAAA=")
tile_set = SubResource("TileSet_3bn0o")

[node name="CornerS" type="TileMapLayer" parent="."]
visible = false
tile_map_data = PackedByteArray("AAAFAAUAAAAKAAUAAAAEAAYAAAAFAAIAAAAGAAYAAAAFAAIAAAAEAAQAAAADAAEAAAAGAAQAAAAFAAEAAAA=")
tile_set = SubResource("TileSet_3bn0o")

[node name="CornerW" type="TileMapLayer" parent="."]
visible = false
tile_map_data = PackedByteArray("AAAFAAUAAAAKAAUAAAAGAAQAAAAFAAEAAAAGAAYAAAAFAAMAAAAEAAQAAAAEAAEAAAAEAAYAAAAEAAEAAAA=")
tile_set = SubResource("TileSet_3bn0o")

[node name="Fog" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD9//3/AAADAA0AAAD+//3/AAADAA0AAAD///3/AAADAA0AAAAAAP3/AAADAA0AAAABAP3/AAADAA0AAAACAP3/AAADAA0AAAADAP3/AAADAA0AAAAEAP3/AAADAA0AAAAFAP3/AAADAA0AAAAGAP3/AAADAA0AAAAHAP3/AAADAA0AAAAIAP3/AAADAA0AAAAJAP3/AAADAA0AAAAKAP3/AAADAA0AAAAKAP7/AAADAA0AAAALAP7/AAADAA0AAAAMAP7/AAADAA0AAAAMAP3/AAADAA0AAAANAP3/AAADAA0AAAALAP3/AAADAA0AAAANAP7/AAADAA0AAAAJAP7/AAADAA0AAAAIAP7/AAADAA0AAAAHAP7/AAADAA0AAAAGAP7/AAADAA0AAAAFAP7/AAADAA0AAAAEAP7/AAADAA0AAAADAP7/AAADAA0AAAACAP7/AAADAA0AAAABAP7/AAADAA0AAAAAAP7/AAADAA0AAAD///7/AAADAA0AAAD+//7/AAADAA0AAAD9//7/AAADAA0AAAD9////AAADAA0AAAD+////AAADAA0AAAD/////AAADAA0AAAAAAP//AAADAA0AAAABAP//AAADAA0AAAACAP//AAADAA0AAAADAP//AAADAA0AAAAEAP//AAADAA0AAAAFAP//AAADAA0AAAAGAP//AAADAA0AAAAHAP//AAADAA0AAAAIAP//AAADAA0AAAAJAP//AAADAA0AAAAKAP//AAADAA0AAAALAP//AAADAA0AAAAMAP//AAADAA0AAAANAP//AAADAA0AAAANAAAAAAADAA0AAAAMAAAAAAADAA0AAAALAAAAAAADAA0AAAAKAAAAAAADAA0AAAAJAAAAAAADAA0AAAAIAAAAAAADAA0AAAAHAAAAAAADAA0AAAAGAAAAAAADAA0AAAAFAAAAAAADAA0AAAAEAAAAAAADAA0AAAADAAAAAAADAA0AAAACAAAAAAADAA0AAAABAAAAAAADAA0AAAAAAAAAAAADAA0AAAD//wAAAAADAA0AAAD+/wAAAAADAA0AAAD9/wAAAAADAA0AAAD9/wEAAAADAA0AAAD+/wEAAAADAA0AAAD+/wIAAAADAA0AAAD9/wIAAAADAA0AAAD9/wMAAAADAA0AAAD9/wQAAAADAA0AAAD+/wQAAAADAA0AAAD+/wUAAAADAA0AAAD+/wYAAAADAA0AAAD9/wYAAAADAA0AAAD9/wUAAAADAA0AAAD+/wMAAAADAA0AAAD//wEAAAADAA0AAAD//wIAAAADAA0AAAD//wMAAAADAA0AAAD//wQAAAADAA0AAAD//wUAAAADAA0AAAD//wYAAAADAA0AAAD//wcAAAADAA0AAAD//wgAAAADAA0AAAD//wkAAAADAA0AAAD+/wkAAAADAA0AAAD+/wgAAAADAA0AAAD+/wcAAAADAA0AAAD9/wcAAAADAA0AAAD9/wgAAAADAA0AAAD9/wkAAAADAA0AAAD+/woAAAADAA0AAAD9/woAAAADAA0AAAD//woAAAADAA0AAAAAAAoAAAADAA0AAAABAAoAAAADAA0AAAACAAoAAAADAA0AAAADAAoAAAADAA0AAAAEAAoAAAADAA0AAAAFAAoAAAADAA0AAAAGAAoAAAADAA0AAAAHAAoAAAADAA0AAAAIAAoAAAADAA0AAAAJAAoAAAADAA0AAAAKAAoAAAADAA0AAAALAAoAAAADAA0AAAAMAAoAAAADAA0AAAANAAoAAAADAA0AAAANAAkAAAADAA0AAAANAAgAAAADAA0AAAANAAcAAAADAA0AAAANAAYAAAADAA0AAAANAAUAAAADAA0AAAANAAQAAAADAA0AAAANAAMAAAADAA0AAAANAAIAAAADAA0AAAAMAAIAAAADAA0AAAAMAAEAAAADAA0AAAANAAEAAAADAA0AAAAMAAMAAAADAA0AAAAMAAQAAAADAA0AAAAMAAUAAAADAA0AAAAMAAYAAAADAA0AAAAMAAcAAAADAA0AAAAMAAgAAAADAA0AAAAMAAkAAAADAA0AAAALAAkAAAADAA0AAAALAAgAAAADAA0AAAALAAcAAAADAA0AAAALAAYAAAADAA0AAAALAAUAAAADAA0AAAALAAQAAAADAA0AAAALAAMAAAADAA0AAAALAAIAAAADAA0AAAALAAEAAAADAA0AAAAKAAEAAAADAA0AAAAKAAIAAAADAA0AAAAKAAMAAAADAA0AAAAJAAMAAAADAA0AAAAJAAQAAAADAA0AAAAJAAUAAAADAA0AAAAKAAUAAAADAA0AAAAKAAYAAAADAA0AAAAKAAcAAAADAA0AAAAKAAgAAAADAA0AAAAKAAkAAAADAA0AAAAKAAQAAAADAA0AAAAJAAIAAAADAA0AAAAJAAEAAAADAA0AAAAJAAYAAAADAA0AAAAJAAcAAAADAA0AAAAJAAgAAAADAA0AAAAJAAkAAAADAA0AAAAIAAkAAAADAA0AAAAHAAkAAAADAA0AAAAGAAkAAAADAA0AAAAFAAkAAAADAA0AAAAEAAkAAAADAA0AAAADAAkAAAADAA0AAAACAAkAAAADAA0AAAABAAkAAAADAA0AAAAAAAkAAAADAA0AAAAAAAgAAAADAA0AAAABAAgAAAADAA0AAAACAAgAAAADAA0AAAADAAgAAAADAA0AAAAEAAgAAAADAA0AAAAFAAgAAAADAA0AAAAFAAcAAAADAA0AAAAGAAcAAAADAA0AAAAHAAcAAAADAA0AAAAIAAcAAAADAA0AAAAIAAgAAAADAA0AAAAHAAgAAAADAA0AAAAGAAgAAAADAA0AAAADAAcAAAADAA0AAAACAAcAAAADAA0AAAABAAcAAAADAA0AAAAAAAcAAAADAA0AAAAAAAYAAAADAA0AAAABAAYAAAADAA0AAAACAAYAAAADAA0AAAADAAYAAAADAA0AAAAEAAYAAAADAA0AAAAFAAYAAAADAA0AAAAGAAYAAAADAA0AAAAHAAYAAAADAA0AAAAIAAYAAAADAA0AAAAEAAcAAAADAA0AAAAFAAUAAAADAA0AAAAFAAQAAAADAA0AAAAFAAMAAAADAA0AAAAFAAIAAAADAA0AAAAGAAIAAAADAA0AAAAGAAMAAAADAA0AAAAHAAMAAAADAA0AAAAGAAQAAAADAA0AAAAGAAUAAAADAA0AAAAHAAUAAAADAA0AAAAIAAUAAAADAA0AAAAEAAUAAAADAA0AAAAAAAUAAAADAA0AAAABAAUAAAADAA0AAAACAAUAAAADAA0AAAADAAUAAAADAA0AAAAEAAQAAAADAA0AAAADAAQAAAADAA0AAAACAAQAAAADAA0AAAABAAQAAAADAA0AAAAAAAQAAAADAA0AAAAAAAMAAAADAA0AAAAAAAIAAAADAA0AAAAAAAEAAAADAA0AAAABAAEAAAADAA0AAAABAAIAAAADAA0AAAABAAMAAAADAA0AAAACAAIAAAADAA0AAAACAAEAAAADAA0AAAADAAIAAAADAA0AAAADAAMAAAADAA0AAAACAAMAAAADAA0AAAADAAEAAAADAA0AAAAEAAEAAAADAA0AAAAEAAIAAAADAA0AAAAEAAMAAAADAA0AAAAFAAEAAAADAA0AAAAGAAEAAAADAA0AAAAHAAEAAAADAA0AAAAIAAEAAAADAA0AAAAIAAIAAAADAA0AAAAHAAIAAAADAA0AAAAIAAMAAAADAA0AAAAIAAQAAAADAA0AAAAHAAQAAAADAA0AAAANAA0AAAADAA0AAAAMAA0AAAADAA0AAAALAA0AAAADAA0AAAAKAA0AAAADAA0AAAAJAA0AAAADAA0AAAAIAA0AAAADAA0AAAAHAA0AAAADAA0AAAAGAA0AAAADAA0AAAAFAA0AAAADAA0AAAAEAA0AAAADAA0AAAADAA0AAAADAA0AAAACAA0AAAADAA0AAAABAA0AAAADAA0AAAAAAA0AAAADAA0AAAD//w0AAAADAA0AAAD+/w0AAAADAA0AAAD9/w0AAAADAA0AAAD9/wwAAAADAA0AAAD+/wwAAAADAA0AAAD//wwAAAADAA0AAAAAAAwAAAADAA0AAAABAAwAAAADAA0AAAACAAwAAAADAA0AAAADAAwAAAADAA0AAAAEAAwAAAADAA0AAAAFAAwAAAADAA0AAAAGAAwAAAADAA0AAAAHAAwAAAADAA0AAAAIAAwAAAADAA0AAAAJAAwAAAADAA0AAAAKAAwAAAADAA0AAAALAAwAAAADAA0AAAAMAAwAAAADAA0AAAANAAwAAAADAA0AAAANAAsAAAADAA0AAAAMAAsAAAADAA0AAAALAAsAAAADAA0AAAAKAAsAAAADAA0AAAAJAAsAAAADAA0AAAAIAAsAAAADAA0AAAAGAAsAAAADAA0AAAAHAAsAAAADAA0AAAAFAAsAAAADAA0AAAAEAAsAAAADAA0AAAACAAsAAAADAA0AAAABAAsAAAADAA0AAAADAAsAAAADAA0AAAAAAAsAAAADAA0AAAD//wsAAAADAA0AAAD+/wsAAAADAA0AAAD9/wsAAAADAA0AAAA=")
tile_set = SubResource("TileSet_k0yfh")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(88, 88)
shape = SubResource("RectangleShape2D_cc630")
debug_color = Color(0, 0.6, 0.701961, 0)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
